<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgound_fragments_general"
    tools:context=".presentation.authentication.register.RegisterFragment">

    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_4xl"
        android:text="@string/register_title"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_h2"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xxs"
        android:text="@string/register_subtitle"
        android:textAlignment="center"
        android:textColor="@color/onboarding_subtitle"
        android:textSize="@dimen/text_size_h5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_title" />

    <EditText
        android:id="@+id/registration_username_edit_text"
        style="@style/EditTextStyle"
        android:hint="@string/placeholder_username"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_subtitle" />

    <EditText
        android:id="@+id/registration_email_edit_text"
        style="@style/EditTextStyle"
        android:autofillHints="emailAddress"
        android:hint="@string/placeholder_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_username_edit_text" />

    <EditText
        android:id="@+id/registration_phone_number_edit_text"
        style="@style/EditTextStyle"
        android:hint="@string/placeholder_phone_number"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_email_edit_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registration_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xxl"
        app:endIconMode="password_toggle"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/registration_phone_number_edit_text">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sign_up_button"
        style="@style/RegularButtonStyle"
        android:layout_marginTop="@dimen/space_xxl"
        android:text="@string/button_sing_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_password_edit_text" />

    <View
        android:id="@+id/sign_up_left_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/space_xxl"
        android:layout_marginEnd="@dimen/space_xxl"
        android:background="@color/black"
        app:layout_constraintEnd_toStartOf="@id/sign_up_or_with"
        app:layout_constraintStart_toStartOf="@id/sign_up_button"
        app:layout_constraintTop_toBottomOf="@id/sign_up_button"/>


    <TextView
        android:id="@+id/sign_up_or_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_login_divider_text"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_h4"
        app:layout_constraintEnd_toEndOf="@id/sign_up_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_button"
        android:layout_marginTop="@dimen/space_m"
        />

    <View
        android:id="@+id/sign_up_right_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/space_xxl"
        android:layout_marginTop="@dimen/space_xxl"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/sign_up_button"
        app:layout_constraintEnd_toEndOf="@id/sign_up_button"
        app:layout_constraintStart_toEndOf="@id/sign_up_or_with"
    />
    <Button
        android:id="@+id/fb_button"
        style="@style/FacebookButtonStyle"
        android:layout_marginTop="@dimen/space_5xl"
        app:icon="@drawable/ic_fb"
        android:text="@string/facebook_singup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_left_divider" />

    <Button
        android:id="@+id/google_button"
        style="@style/GoogleButtonStyle"
        android:textColor="@color/black"
        app:icon = "@drawable/ic_google"
        android:layout_marginTop="@dimen/space_xxl"
        android:text="@string/google_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fb_button" />

    <TextView
        app:layout_constraintHorizontal_chainStyle="packed"
        android:id="@+id/dont_have_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_hace_acc"
        android:textSize="@dimen/text_size_h4"
        android:layout_marginBottom="@dimen/space_l"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/google_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/go_to_login" />

    <TextView
        android:id="@+id/go_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:textColor="@color/fb_color"
        android:layout_marginStart="@dimen/space_s"
        android:textSize="@dimen/text_size_h4"
        app:layout_constraintTop_toTopOf="@id/dont_have_acc"
        app:layout_constraintStart_toEndOf="@id/dont_have_acc"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>