<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/loginFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgound_fragments_general"
    tools:context=".presentation.authentication.login.LoginFragment">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_6xl"
        android:text="@string/login_title"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_h2"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_s"
        android:layout_marginTop="@dimen/space_l"
        android:text="@string/email"
        android:textColor="@color/box_title_login"
        android:textSize="@dimen/text_size_body_3"
        app:flow_horizontalAlign="start"
        app:layout_constraintStart_toStartOf="@id/login_email_edit_text"
        app:layout_constraintTop_toBottomOf="@id/login_title" />

    <EditText
        android:id="@+id/login_email_edit_text"
        style="@style/EditTextStyle"
        android:autofillHints="emailAddress"
        android:layout_marginTop="@dimen/space_xxs"
        android:hint="@string/placeholder_email_example"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_title" />

    <TextView
        android:id="@+id/password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_s"
        android:layout_marginTop="@dimen/space_l"
        android:text="@string/password"
        android:textColor="@color/box_title_login"
        android:textSize="@dimen/text_size_body_3"
        app:flow_horizontalAlign="start"
        app:layout_constraintStart_toStartOf="@id/login_email_edit_text"
        app:layout_constraintTop_toBottomOf="@id/login_email_edit_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginStart="@dimen/space_xxl"
        android:layout_marginEnd="@dimen/space_xxl"
        android:id="@+id/login_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xxs"
        app:endIconMode="password_toggle"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/password_title">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:id="@+id/password_input"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/remember_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_l"
        android:text="@string/remember_me_check"
        android:textSize="@dimen/text_size_h5"
        app:layout_constraintStart_toStartOf="@id/login_email_edit_text"
        app:layout_constraintTop_toBottomOf="@id/login_password_edit_text" />
    <TextView
        android:id="@+id/forgot_pass"
        android:layout_marginTop="@dimen/space_s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:text="@string/forget_pass"
        app:layout_constraintTop_toTopOf="@id/remember_check_box"
        app:layout_constraintEnd_toEndOf="@id/login_password_edit_text"


        />
    <Button
        android:id="@+id/login_button"
        style="@style/RegularButtonStyle"
        android:layout_marginTop="@dimen/space_l"
        android:text="@string/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/remember_check_box" />

    <View
        android:id="@+id/sign_up_left_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/space_xxl"
        android:layout_marginEnd="@dimen/space_xxl"
        android:background="@color/black"
        app:layout_constraintEnd_toStartOf="@id/sign_up_or_with"
        app:layout_constraintStart_toStartOf="@id/login_button"
        app:layout_constraintTop_toBottomOf="@id/login_button" />


    <TextView
        android:id="@+id/sign_up_or_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_m"
        android:text="@string/register_login_divider_text"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_h4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

    <View
        android:id="@+id/sign_up_right_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/space_xxl"
        android:layout_marginTop="@dimen/space_xxl"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="@id/login_button"
        app:layout_constraintStart_toEndOf="@id/sign_up_or_with"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

    <Button
        android:id="@+id/fb_button"
        style="@style/FacebookButtonStyle"
        android:layout_marginTop="@dimen/space_xxxl"
        app:icon="@drawable/ic_fb"
        android:text="@string/facebook_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_left_divider" />

    <Button
        android:id="@+id/google_button"
        style="@style/GoogleButtonStyle"
        app:icon = "@drawable/ic_google"
    android:layout_marginTop="@dimen/space_xxl"
        android:text="@string/google_login"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fb_button" />

    <TextView
        app:layout_constraintHorizontal_chainStyle="packed"
        android:id="@+id/dont_have_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_acc"
        android:textSize="@dimen/space_s"
        android:layout_marginBottom="@dimen/space_l"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/go_to_sign_up"
        app:layout_constraintTop_toBottomOf="@id/google_button" />

    <TextView
        android:id="@+id/go_to_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/fb_color"
        android:layout_marginStart="@dimen/space_s"
        android:text="@string/button_sing_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dont_have_acc"
        app:layout_constraintTop_toTopOf="@id/dont_have_acc" />


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>