<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.home.contacts.addContact.AddContactFragment">

    <TextView
        android:id="@+id/new_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_m"
        android:layout_marginTop="@dimen/space_5xl"
        android:text="@string/new_contact"
        android:textSize="@dimen/text_size_h4"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_m"
        android:text="@string/close"
        android:textColor="@color/hook_blue"
        android:drawablePadding="@dimen/space_xxs"
        android:textSize="@dimen/text_size_h5"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/new_contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/new_contact" />

    <TextView
        android:id="@+id/text_image"
        android:layout_width="@dimen/image_xxxl"
        android:layout_height="@dimen/image_xxxl"
        android:layout_marginTop="@dimen/space_l"
        android:background="@drawable/circle_shape_image"
        android:backgroundTint="@color/divider_grey"
        android:gravity="center"
        android:text="A"
        android:textColor="@color/chats_tabs_grey"
        android:textSize="@dimen/text_size_image_letter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_contact" />

    <ProgressBar
        android:id="@+id/register_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_l"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/nickname_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_image" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nickname_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_xl"
        android:layout_marginTop="@dimen/space_5xl"
        android:layout_marginEnd="@dimen/space_xl"
        android:hint="@string/nickname_optional"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:errorTextColor="@color/red"
        app:hintAnimationEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_image">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="@dimen/text_size_body_2" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_xl"
        android:layout_marginTop="@dimen/space_s"
        android:layout_marginEnd="@dimen/space_xl"
        android:hint="@string/contact_option"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:errorTextColor="@color/red"
        app:hintAnimationEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nickname_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contact_credential"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="@dimen/text_size_body_2" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/add_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_xxs"
        android:text="@string/add_contact"
        android:textColor="@color/hook_blue"
        android:drawablePadding="@dimen/space_xxs"
        android:drawableStart="@drawable/ic_add_plus_blue"
        android:textSize="@dimen/text_size_h5"
        android:layout_marginTop="@dimen/space_xl"
        app:layout_constraintStart_toStartOf="@id/username_input_layout"
        app:layout_constraintTop_toBottomOf="@id/username_input_layout" />



</androidx.constraintlayout.widget.ConstraintLayout>